# ascent

scripts/uberenv/: project.json
src/: CMakeLists.txt
src/alpine/: alpine.cpp  alpine.hpp
src/alpine/pipelines/flow_filters/: alpine_flow_pipeline_relay_filters.cpp
src/ascent/: CMakeLists.txt  ascent.hpp
src/ascent/runtimes/: ascent_main_runtime.cpp  ascent_main_runtime.hpp  ascent_vtkh_data_adapter.cpp
src/ascent/runtimes/flow_filters/: ascent_runtime_babelflow_filters.h  ascent_runtime_blueprint_filters.cpp  ascent_runtime_filters.cpp  ascent_runtime_rover_filters.cpp  ascent_runtime_trigger_filters.cpp  ascent_runtime_trigger_filters.hpp  ascent_runtime_vtkh_filters.cpp  ascent_runtime_vtkh_filters.hpp
src/examples/: CMakeLists.txt
src/examples/babelflow_pmt/: CMakeCache.txt  CMakeLists.txt  Makefile  ascent_babelflow_example.cpp  cmake_install.cmake  data0.params  data1.params  data2.params  data3.params  data4.params  data5.params  data6.params  data7.params  graph.dot  mt_0.txt  mt_1.txt  mt_2.txt  mt_3.txt  mt_4.txt  mt_5.txt  mt_6.txt  mt_7.txt  original_graph.dot  simpgraph.dot
src/examples/proxies/cloverleaf3d-ref/: ascent_actions.json  clover.in
src/examples/proxies/lulesh2.0.3/: CMakeLists.txt  alpine_actions.json  alpine_flow_verdict_filter.cpp  alpine_flow_verdict_filter.hpp  lulesh-init.cc  lulesh.cc
src/examples/proxies/lulesh2.0.3/verdict/vtkverdict/: CMakeLists.txt
src/examples/synthetic/blow/: CMakeLists.txt  blow.cpp
src/tests/ascent/: CMakeLists.txt  t_ascent_mpi_triggers.cpp  t_ascent_triggers.cpp
(+13 files in other folders)
